fix: custom scrollbar

--- a/web/app/themes/osolo/resources/assets/styles/config/_locomotive-scroll.scss
+++ b/web/app/themes/osolo/resources/assets/styles/config/_locomotive-scroll.scss
@@ -35,7 +35,7 @@ html.has-scroll-dragging {
   white-space: nowrap;
   height: 100%;
 }
-
+::-webkit-scrollbar,
 .c-scrollbar {
   position: absolute;
   right: 0;
@@ -46,9 +46,12 @@ html.has-scroll-dragging {
   transition: transform 0.3s, opacity 0.3s;
   opacity: 0;
 }
+::-webkit-scrollbar,
 .c-scrollbar:hover {
   transform: scaleX(1.45);
 }
+
+::-webkit-scrollbar,
 .c-scrollbar:hover,
 .has-scroll-scrolling .c-scrollbar,
 .has-scroll-dragging .c-scrollbar {
@@ -65,11 +68,12 @@ html.has-scroll-dragging {
   transform: scaleY(1.3);
 }
 
+::-webkit-scrollbar-thumb,
 .c-scrollbar_thumb {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: black;
+  background-color: pink;
   opacity: 0.5;
   width: 7px;
   border-radius: 10px;
@@ -84,4 +88,8 @@ html.has-scroll-dragging {
 [data-scroll-direction='horizontal'] .c-scrollbar_thumb {
   right: auto;
   bottom: 0;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: black;
 }
